update method modified for product and order also order method redesign